# blog-project

./: .gitignore  Cargo.toml  README.md
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs  models.rs
blog-proto/: Cargo.toml  build.rs
blog-proto/proto/: blog.proto
blog-proto/src/: lib.rs
blog-server/: Cargo.toml
blog-server/migrations/: 0001_create_users.sql  0002_create_posts.sql
blog-server/src/: main.rs  server.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  logging.rs  mod.rs  password.rs
blog-server/src/presentation/: error.rs  grpc_service.rs  http_handlers.rs  middleware.rs  mod.rs
blog-wasm/: Cargo.toml  index.html  main.js  style.css
blog-wasm/src/: lib.rs
