[workspace]
resolver = "2"

members = [
    "blog-proto",
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }