[workspace]
resolver = "2"

members = [
    "blog-proto",
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }

# HTTP
actix-web = "4"
actix-web-httpauth = "0.8"
actix-cors = "0.7"

# gRPC / Proto
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
dotenvy = "0.15"
env_logger = "0.11" 

# Security
jsonwebtoken = "9"
argon2 = "0.5"

# Utils
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }