[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true

blog-proto = { path = "../blog-proto" }