[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-proto = { path = "../blog-proto" }

# Runtime
tokio.workspace = true

# HTTP
actix-web.workspace = true
actix-web-httpauth.workspace = true
actix-cors.workspace = true

# gRPC / Proto
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

# Database
sqlx.workspace = true
dotenvy.workspace = true

# Security
jsonwebtoken.workspace = true
argon2.workspace = true

# Utils
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true