[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

gloo-net = { version = "0.7", features = ["http"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

js-sys = "0.3"

web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "console",
] }